Se corrigieron las rutas de las imagenes.

--- a/src/pages/action-category/action-category.html
+++ b/src/pages/action-category/action-category.html
@@ -13,7 +13,7 @@
     <div class="scroll-content" id="cardCategories">
       <ion-card class="cards">
         <div class="imgCard">
-            <img src="../../assets/imgs/prueba/tegnology-category.jpg"/>
+            <img src="assets/imgs/prueba/tegnology-category.jpg"/>
         </div>
           <div class="card-title">Tecnología</div>
           <div class="card-subtitle">6 Artículos</div>
@@ -21,7 +21,7 @@
       
         <ion-card class="cards">
           <div class="imgCard">
-            <img src="../../assets/imgs/prueba/house-category.jpg" class="imgCard"/>
+            <img src="assets/imgs/prueba/house-category.jpg" class="imgCard"/>
           </div>
           <div class="card-title">Hogar</div>
           <div class="card-subtitle">8 Artículos</div>
@@ -29,7 +29,7 @@
       
         <ion-card class="cards">
           <div class="imgCard">
-            <img src="../../assets/imgs/prueba/accessory.jpg" class="imgCard"/>
+            <img src="assets/imgs/prueba/accessory.jpg" class="imgCard"/>
           </div>
           <div class="card-title">Accesorios</div>
           <div class="card-subtitle">4 Artículos</div>
