Se corrigieron las rutas de las imagenes.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-content padding center text-center class="contentHome">
   <div class="initial">
 
-    <img src="../../assets/imgs/fondo-Inico.png" class="imgHome"/>
+    <img src="assets/imgs/fondo-Inico.png" class="imgHome"/>
 
     <div style="margin-top: 20px">
       <div style="width: 100%">
