--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -8,7 +8,7 @@
             </ion-col>
             <ion-col class="col-shape">
               <div class="img-shape">
-                <img src="../../assets/imgs/customicons/shape.png"/>
+                <img src="assets/imgs/customicons/shape.png"/>
               </div>
             </ion-col>
           </ion-row>
@@ -27,7 +27,7 @@
               <p class="value-price">{{ order.price }}</p>
             </ion-col>
             <ion-col>
-                <img [src]="'../../assets/imgs/customicons/' + order.statusImage" 
+                <img [src]="'assets/imgs/customicons/' + order.statusImage" 
                 class="icon-status"/>
               <p class="status"><strong>{{ order.statusName }}</strong></p>
             </ion-col>
@@ -45,13 +45,13 @@
   <div class="initial">
     <div id="header" class="bar">
       <button id="search" class="buttonBar">
-        <img src="../../assets/imgs/customicons/search.png" class="icon-bar">
+        <img src="assets/imgs/customicons/search.png" class="icon-bar">
       </button>
       <button id="user" class="buttonBar">
-          <img src="../../assets/imgs/customicons/user.png" class="icon-bar-user">
+          <img src="assets/imgs/customicons/user.png" class="icon-bar-user">
       </button>
       <button id="cart" class="buttonBar">
-          <img src="../../assets/imgs/customicons/shopping-cart.png" class="icon-bar">
+          <img src="assets/imgs/customicons/shopping-cart.png" class="icon-bar">
       </button>
     </div>
     <div id="bottom" class="bar">
