--- a/src/pages/product/product.html
+++ b/src/pages/product/product.html
@@ -29,7 +29,7 @@
                 <ion-icon name="remove"></ion-icon>
             </button>
             <p class="quantity">{{currentNumber}}</p>
-            <img class="img-control" src="../../assets/imgs/customicons/control.png" >
+            <img class="img-control" src="assets/imgs/customicons/control.png" >
   
             <button class="button-add" (click)="increment()">
                 <ion-icon name="add"></ion-icon>
@@ -124,13 +124,13 @@
     <div id="header" class="bar">
 
       <button id="search" class="buttonBar">
-        <img src="../../assets/imgs/customicons/search.png" class="icon-bar">
+        <img src="assets/imgs/customicons/search.png" class="icon-bar">
       </button>
       <button id="user" class="buttonBar">
-          <img src="../../assets/imgs/customicons/user.png" class="icon-bar-user">
+          <img src="assets/imgs/customicons/user.png" class="icon-bar-user">
       </button>
       <button id="cart" class="buttonBar">
-          <img src="../../assets/imgs/customicons/shopping-cart.png" class="icon-bar">
+          <img src="assets/imgs/customicons/shopping-cart.png" class="icon-bar">
       </button>
     </div>
     <div id="bottom" class="bar">
