Se corrigieron las rutas de las imagenes.

--- a/src/pages/sing-in/sing-in.html
+++ b/src/pages/sing-in/sing-in.html
@@ -8,7 +8,7 @@
   
   <div class="initial">
     <div>
-        <img src="../../assets/imgs/fondo-Inico.png" class="imgSingIn"
+        <img src="assets/imgs/fondo-Inico.png" class="imgSingIn"
         alt="fondo" />
     </div>
   
