Se corrigieron las rutas de las imagenes.

--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -44,7 +44,7 @@
     <!--bottom-->
     <div id="bottom" class="bar">
       <button id="left" class="buttonBar" (click)="moveLeft(1)">
-          <img src="../../assets/imgs/customicons/left.png" class="icon-bar">
+          <img src="assets/imgs/customicons/left.png" class="icon-bar">
       </button>
       
       <!--Categorias-->
@@ -55,7 +55,7 @@
       </ion-slides>
 
       <button id="right" class="buttonBar" (click)="moveRight(1)">
-          <img src="../../assets/imgs/customicons/right.png" class="icon-bar">
+          <img src="assets/imgs/customicons/right.png" class="icon-bar">
       </button>
     </div>
     <button class="button-home" (click)="backPage()">
