--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -5,7 +5,7 @@
       <ion-slides pager>
         <ion-slide *ngFor="let slide of slides">
           <div class="slides-img" 
-          [style.background-image]="'url(../../assets/imgs/prueba/' + slide.image + ')'">
+          [style.background-image]="'url(assets/imgs/prueba/' + slide.image + ')'">
           </div>
         </ion-slide>
       </ion-slides>
