--- a/src/pages/start/start.html
+++ b/src/pages/start/start.html
@@ -22,7 +22,9 @@
       <ion-row wrap>
         <ion-col col-6 *ngFor="let product of products">
           <ion-card tappable (click)="goProduct(product)">
-            <img [src]="'https://alquio.com/productos/' + product.foto" class="imgCard"/>
+            <ion-thumbnail>
+              <img [src]="'https://alquio.com/productos/' + product.foto" class="imgCard"/>
+            </ion-thumbnail>
             <ion-card-content>
               <p>{{ '$ ' + product.precio }}</p>
               <p><strong>{{ product.titulo }}</strong></p>
@@ -37,17 +39,12 @@
   </div>
 
   <div class="initial">
-
-    <!--Header-->
-    <header-app></header-app>
-
     <!--bottom-->
     <div id="bottom" class="bar">
       <button id="left" class="buttonBar" (click)="moveLeft(1)">
           <img src="assets/imgs/customicons/left.png" class="icon-bar">
       </button>
-      
-      <!--Categorias-->
+
       <ion-slides class="categories">
         <ion-slide *ngFor="let category of categ">
           <p id="categoy"><strong>{{ category.name }}</strong></p>
@@ -58,23 +55,42 @@
           <img src="assets/imgs/customicons/right.png" class="icon-bar">
       </button>
     </div>
-    <button class="button-home" (click)="backPage()">
+    <button class="button-back" (click)="backPage()">
         <ion-icon name="power" style="color: white"></ion-icon>
     </button>
   </div>
   
 </ion-content>
 
-<drawer-category [sideBar]="sideBar" [categ]="categ">
-</drawer-category>
+<!--Opacidad del Contenido-->
+<drawer-opacity #sideBar></drawer-opacity>
 
-<drawer-category-panel>
-</drawer-category-panel>
+<!--Volver-->
+<!-- <button class="button-back" (click)="backPage()">
+    <ion-icon name="power" style="color: white"></ion-icon>
+</button> -->
 
-<drawer-filter [options]="drawerOptions" [sideBar]="sideBar">
-</drawer-filter>
+<!--Header-->
+<header-app [options]="namePage"></header-app>
 
+<!--Bottom-->
+<!-- <bottom-app></bottom-app> -->
+
+<!--Opciones del usuario-->
 <drawer-user [options]="namePage" [sideBar]="sideBar"></drawer-user>
 <drawer-user-panel></drawer-user-panel>
 
-<drawer-opacity #sideBar></drawer-opacity>
+
+
+
+
+
+<!--Mostrar Categorias-->
+<drawer-category [sideBar]="sideBar" [categ]="categ"></drawer-category>
+<drawer-category-panel></drawer-category-panel>
+
+<!--Motrar Filtro de Variantes-->
+<drawer-filter [options]="drawerOptions" [sideBar]="sideBar">
+</drawer-filter>
+
+
